# todo_phase_lll

./: .dockerignore  .gitignore  .mcp.json  .vercelignore  README.md  demo.py  requirements-prod.txt  test_acceptance_criteria.py  vercel.json
.claude/: settings.local.json
.claude/commands/: mcp-test.sh
api/: index.py
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  get_user_ids.py  mcp_server.py  migrate_tags_type.py  pyproject.toml  requirements.txt  run_migration.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_task_extended_fields.py  003_add_conversations.py
backend/src/: main.py
backend/src/agents/: main_agent.py  message_preprocessor.py  openai_client.py  system_prompt.py  tool_executor.py  tool_registry.py
backend/src/api/: __init__.py  deps.py
backend/src/api/routes/: __init__.py  auth.py  chat.py  tasks.py
backend/src/api/routes/mcp/: __init__.py  add_task.py  complete_task.py  delete_task.py  get_task.py  list_tasks.py  restore_task.py  update_task.py
backend/src/core/: __init__.py  config.py  security.py
backend/src/models/: __init__.py  conversation.py  database.py  schemas.py  task.py  user.py
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: proxy.ts
k8s/todo-app/: .helmignore  Chart.yaml  values.yaml
scripts/: local-deploy.sh  local-teardown.sh
specs/001-soft-delete-reason/: plan.md  spec.md
specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/agents/: planning.md  (+7 more)
(+96 files in other folders)
